# millrace-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  RUST_EFFICACY_RUN.md  build.rs
docs/: architecture.md  millrace-technical-overview.md  provenance.md  rust-port-roadmap.md  source-package-map.md  testing.md  v0.1.0-autonomous-build-proof.md
docs/millrace-ideas/: slice-1-contracts.md  slice-2-workspace-substrate.md  slice-3-assets-and-compiler.md  slice-4-cli-read-write-surface.md  slice-5-serial-runtime.md  slice-6-daemon-runtime.md  slice-7-runner-adapters.md  slice-8-advanced-parity.md
docs/runtime/: README.md  millrace-arbiter-and-completion-behavior.md  millrace-blueprint-planning.md  millrace-cli-reference.md  millrace-compiled-stage-graphs-and-run-traces.md  millrace-compiler-and-frozen-plans.md  (+9 more)
src/: compiler.rs  lib.rs  main.rs  recon_packets.rs  work_documents.rs  workspace.rs
tests/: blueprint_contracts.rs  blueprint_effects.rs  blueprint_planning_loop.rs  compiler_assets.rs  compiler_capability_grants.rs  compiler_contracts.rs  compiler_materialization.rs  compiler_parity.rs  compiler_persistence.rs  compiler_workflow_primitives.rs  contracts_blueprint.rs  contracts_capabilities.rs  contracts_public_exports.rs  contracts_runtime_json.rs  contracts_stage_metadata.rs  contracts_work_documents.rs  contracts_workflow_primitives.rs  parity_cli.rs  runners_capability_support.rs  runners_codex_cli.rs  runners_live_smoke.rs  runners_normalization.rs  runners_pi_rpc.rs  runtime_capability_gates.rs  runtime_daemon.rs  runtime_effects.rs  runtime_failure_policy.rs  runtime_lanes.rs  runtime_request_context.rs  runtime_run_inspection.rs  runtime_serial.rs  shipped_skill_lint.rs  workspace_assets_baseline.rs  workspace_doctor.rs  workspace_init_parity.rs  workspace_paths_init.rs  workspace_queue_state_stores.rs  workspace_runtime_control.rs  workspace_runtime_lock.rs  workspace_schema_epoch.rs  (+1 more)
(+261 files in other folders)
