[package]
name = "millrace-ai"
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
description = "Experimental Rust implementation of the Millrace runtime."
license = "Apache-2.0"
repository = "https://github.com/tim-osterhus/millrace-rs"
homepage = "https://millrace.ai"
readme = "README.md"
keywords = ["ai", "agents", "runtime", "workflow"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "Cargo.lock",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "docs/**/*.md",
    "src/**/*.rs",
]

[lib]
name = "millrace_ai"
path = "src/lib.rs"

[[bin]]
name = "millrace"
path = "src/main.rs"

[dependencies]

[dev-dependencies]
assert_cmd = "2"
insta = "1"
serde_json = "1"
tempfile = "3"
