[package]
name = "millrace-ai"
version = "0.3.3"
edition = "2024"
rust-version = "1.85"
description = "Experimental Rust implementation of the Millrace runtime."
license = "Apache-2.0"
repository = "https://github.com/tim-osterhus/millrace-rs"
homepage = "https://millrace.ai"
readme = "README.md"
keywords = ["ai", "agents", "runtime", "workflow"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "/build.rs",
    "/Cargo.lock",
    "/Cargo.toml",
    "/CHANGELOG.md",
    "/README.md",
    "/ROADMAP.md",
    "/LICENSE",
    "/docs/**/*.md",
    "/src/assets/**/*",
    "/src/**/*.rs",
    "/tests/**/*.rs",
    "/tests/fixtures/**/*",
    "/tests/support/**/*",
    "!**/__pycache__/**",
    "!**/*.pyc",
    "!**/*.pyo",
]

[lib]
name = "millrace_ai"
path = "src/lib.rs"

[[bin]]
name = "millrace"
path = "src/main.rs"

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "parsing"] }
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
insta = "1"
tempfile = "3"
